devops/kustomize/base/minio-middleware-api.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minio-api-strip
  labels:
    app.kubernetes.io/component: minio
spec:
  stripPrefix:
    prefixes:
      - /buckets
