devops/kustomize/base/minio-middleware-console.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: minio-console-strip
  labels:
    app.kubernetes.io/component: minio
spec:
  stripPrefix:
    prefixes:
      - /minio
