devops/kustomize/base/minio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio
  labels:
    app.kubernetes.io/component: minio
    app.kubernetes.io/name: minio
spec:
  selector:
    app.kubernetes.io/component: minio
    app.kubernetes.io/name: minio
  ports:
    - name: http
      port: 9000
      targetPort: http
    - name: console
      port: 9001
      targetPort: console
