devops/kustomize/base/ingress-app.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  labels:
    app.kubernetes.io/component: app
spec:
  rules:
    - host: preview.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  name: http
